--- a/base/assets/css/global.css
+++ b/base/assets/css/global.css
@@ -32,7 +32,7 @@ body.light *.blurple {
     font-family: 'Whitney Medium';
     font-style: normal;
     font-weight: normal;
-    src: local('Whitney Medium'), url('whitneymedium.woff') format('woff');
+    src: local('Whitney Medium'), url('../fonts/whitneymedium.woff') format('woff');
 }
 
 
@@ -40,7 +40,8 @@ body.light *.blurple {
     font-family: 'Whitney Medium Italic';
     font-style: normal;
     font-weight: normal;
-    src: local('Whitney Medium Italic'), url('whitneymediumitalic.woff') format('woff');
+    src: local('Whitney Medium Italic'),
+    url('../fonts/whitneymediumitalic.woff') format('woff');
 }
 
 
@@ -48,7 +49,8 @@ body.light *.blurple {
     font-family: 'Whitney Bold';
     font-style: normal;
     font-weight: normal;
-    src: local('Whitney Bold'), url('whitneybold.woff') format('woff');
+    src: local('Whitney Bold'),
+    url('../fonts/whitneybold.woff') format('woff');
 }
 
 
@@ -56,7 +58,8 @@ body.light *.blurple {
     font-family: 'Whitney Semibold Regular';
     font-style: normal;
     font-weight: normal;
-    src: local('Whitney Semibold Regular'), url('whitneysemibold.woff') format('woff');
+    src: local('Whitney Semibold Regular'),
+    url('../fonts/whitneysemibold.woff') format('woff');
 }
 
 
@@ -64,7 +67,8 @@ body.light *.blurple {
     font-family: 'Whitney Book Regular';
     font-style: normal;
     font-weight: normal;
-    src: local('Whitney Book Regular'), url('whitneybook.woff') format('woff');
+    src: local('Whitney Book Regular'),
+    url('../fonts/whitneybook.woff') format('woff');
 }
 
 
@@ -72,7 +76,8 @@ body.light *.blurple {
     font-family: 'Whitney Light Regular';
     font-style: normal;
     font-weight: normal;
-    src: local('Whitney Light Regular'), url('whitneylight.woff') format('woff');
+    src: local('Whitney Light Regular'),
+    url('../fonts/whitneylight.woff') format('woff');
 }
 
 
@@ -80,7 +85,8 @@ body.light *.blurple {
     font-family: 'Whitney Semibold Italic';
     font-style: normal;
     font-weight: normal;
-    src: local('Whitney Semibold Italic'), url('WhitneySemiboldItalic.woff') format('woff');
+    src: local('Whitney Semibold Italic'),
+    url('../fonts/WhitneySemiboldItalic.woff') format('woff');
 }
 
 
@@ -88,7 +94,8 @@ body.light *.blurple {
     font-family: 'Whitney Book Italic';
     font-style: normal;
     font-weight: normal;
-    src: local('Whitney Book Italic'), url('whitneybookitalic.woff') format('woff');
+    src: local('Whitney Book Italic'),
+    url('../fonts/whitneybookitalic.woff') format('woff');
 }
 
 
@@ -96,5 +103,6 @@ body.light *.blurple {
     font-family: 'Whitney Light Italic';
     font-style: normal;
     font-weight: normal;
-    src: local('Whitney Light Italic'), url('whitneylightitalic.woff') format('woff');
+    src: local('Whitney Light Italic'),
+    url('../fonts/whitneylightitalic.woff') format('woff');
 }
