--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,20 +3,30 @@
 
 /* vars */
 :root {
-	--fira-code: 'Fira Code', monospace;
-	--text-color: rgb(45, 173, 177);
-	--bg-color: rgb(0, 8, 8);
+  --fira-code: 'Fira Code', monospace;
+  --text-color: rgb(45, 173, 177);
+  --bg-color: rgb(0, 8, 8);
 }
 
 /* base styles */
 body {
-	background-color: var(--bg-color);
-	font-family: var(--fira-code);
-	color: var(--text-color);
-	padding-left: 2%;
-	padding-top: 0.5%;
+  background-color: var(--bg-color);
+  font-family: var(--fira-code);
+  color: var(--text-color);
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 0.5%;
 }
 
 #prompt {
-	user-select: none;
+  user-select: none;
+}
+
+hr {
+  color: var(--text-color);
+}
+
+a:link,
+a:visited {
+  color: var(--text-color);
 }
