--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -26,7 +26,7 @@ hr {
   color: var(--text-color);
 }
 
-a:link,
+a,
 a:visited {
-  color: var(--text-color);
+  color: var(--text-color) !important;
 }
