--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -35,3 +35,20 @@ nav {
   align-items: right;
   text-align: right;
 }
+
+blockquote {
+  page-break-inside: avoid;
+
+  padding: 10px 20px;
+  margin: 0 0 20px;
+  font-size: 17.5px;
+  border-left: 5px solid rgb(45, 173, 177);
+}
+
+pre code {
+  padding: 2px 4px;
+  font-size: 90%;
+  color: initial;
+  background-color: #113b3d;
+  border-radius: 4px;
+}
