--- a/blog/template/header.html
+++ b/blog/template/header.html
@@ -6,24 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Splatterxl :: Blog</title>
     <link rel="stylesheet" href="/assets/css/blog.css" />
+    <link rel="stylesheet" href="/assets/css/global.css" />
+    <!--
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/highlight.js/8.4.0/styles/solarized_dark.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/bootstrap/3.2.0/css/bootstrap.css"
-    />
-
-    <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
-    <!-- Primary Meta Tags -->
+    -->
 
     <!-- Embed previews -->
     <meta name="title" content="Splatterxl :: Blog" />
     <meta
       name="description"
-      content="This is my humble abode >~<. Check me and my projects out here."
+      content="Here's where I rant about issues in life and programming, and about just how it generally sucks being me."
     />
 
     <!-- Open Graph / Facebook -->
@@ -32,7 +27,7 @@
     <meta property="og:title" content="Splatterxl :: Blog" />
     <meta
       property="og:description"
-      content="This is my humble abode >~<. Check me and my projects out here."
+      content="Here's where I rant about issues in life and programming, and about just how it generally sucks being me."
     />
 
     <!-- Twitter -->
@@ -41,7 +36,7 @@
     <meta property="twitter:title" content="Splatterxl :: Blog" />
     <meta
       property="twitter:description"
-      content="This is my humble abode >~<. Check me and my projects out here."
+      content="Here's where I rant about issues in life and programming, and about just how it generally sucks being me."
     />
 
     <!-- End of Embed Previews -->
@@ -61,10 +56,3 @@
       <a href="/blog">Blog</a>
     </nav>
     <article id="main">
-      <h1 id="main-h1">Loading...</h1>
-      <p id="main-p">We're fetching your requested article! Hold tight...</p>
-    </article>
-
-    <script src="/assets/js/blog.js" type="module"></script>
-  </body>
-</html>
