--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,54 +1,56 @@
-/* imports */
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;700&display=swap');
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css);
 
-/* vars */
-:root {
-  --fira-code: 'Fira Code', monospace;
-  --text-color: rgb(45, 173, 177);
-  --bg-color: rgb(0, 8, 8);
-}
-
-/* base styles */
 body {
-  background-color: var(--bg-color);
-  font-family: var(--fira-code);
-  color: var(--text-color);
-  padding-left: 2%;
-  padding-right: 2%;
-  padding-top: 0.5%;
+  padding: 2%;
+  border: 1px solid black;
+  padding-bottom: 10%;
+  margin: 2%;
+  background-color: rgb(230, 208, 174);
 }
 
-#prompt {
+header {
+  border-bottom: 2px solid black;
+}
+
+article {
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+
+.large-num {
+  font-size: 500%;
+  padding-bottom: none;
+  margin-bottom: none;
+}
+
+.box-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.box-stuff {
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 15px;
   user-select: none;
 }
 
-hr {
-  color: var(--text-color);
+div {
+  box-sizing: border-box;
 }
 
-a,
-a:visited {
-  color: var(--text-color) !important;
+p {
+  box-sizing: border-box;
 }
 
-nav {
-  align-items: right;
-  text-align: right;
+td {
+  margin: 2%;
+  margin-left: 4%;
+  margin-right: 4%;
+  padding: 2%;
+  width: 50rem;
 }
 
-blockquote {
-  page-break-inside: avoid;
-
-  padding: 10px 20px;
-  margin: 0 0 20px;
-  font-size: 17.5px;
-  border-left: 5px solid rgb(45, 173, 177);
-}
-
-pre code {
-  padding: 2px 4px;
-  font-size: 90%;
-  color: initial;
-  background-color: #113b3d;
-  border-radius: 4px;
+#stats {
+  align-items: center;
 }
