--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -87,8 +87,6 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
-  max-height: 10rem;
-  min-height: 10.5rem;
 }
 
 .card:hover,
@@ -107,6 +105,12 @@
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
+}
+
+.card .img {
+  /* align to the bottom right */ 
+  align-self: flex-end;
+  align-items: right;
 }
 
 .cardLink {
