--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,3 +28,10 @@ a {
     clip-path: inset(0.6px);
   }
 }
+
+#navbar {
+  position: fixed; /* Make it stick/fixed */
+  top: -50px; /* Hide the navbar 50 px outside of the top view */
+  width: 100%; /* Full width */
+  transition: top 0.3s; /* Transition effect when sliding down (and up) */
+}
