--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,20 +1,6 @@
-<<<<<<< HEAD
----
-const today = new Date();
----
-
-<footer>
-	&copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
-</footer>
-<style>
-	footer {
-		padding: 25px;
-		text-align: center;
-	}
-=======
 <footer>
   <span>
-    &copy; {new Date().getFullYear()} Your Blog.
+    &copy; {new Date().getFullYear()} Splatterxl.
     Powered by <a href="https://astro.build" target="_blank" rel="noopener">Astro</a>.
     Template by <a href="https://www.twitter.com/Charca" target="_blank" rel="noopener">Maxi Ferreira</a>.
   </span>
@@ -30,5 +16,4 @@ const today = new Date();
     text-align: center;
     width: 100%;
   }
->>>>>>> 3cf121b... Initial commit from Astro
 </style>
