--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -6,5 +6,5 @@
 </style>
 
 <a href="/">
-  <img alt="Blog Logo" src="/assets/logo.webp" width="75" height="50">
+  <img id="site-logo" alt="Blog Logo" src="/assets/icon.png" width="406" height="406">
 </a>
