--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,12 @@
+:global(html), :root, html, body {
+  scroll-behavior: smooth;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  :global(html), :root, html, body {
+    scroll-behavior: auto;
+  }
+}
 
 :root {
   --background-body: #fff;
@@ -6,6 +15,7 @@
   --primary-color: #548e9b;
   --font-family-serif: Merriweather, serif;
   --font-family-sans: 'Fira Sans', sans-serif;
+  scroll-behavior: smooth;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -91,10 +101,19 @@ h6 a:hover {
   color: var(--text-secondary)
 }
 
+a[href^="#user-content-fn"] {
+  text-decoration: none;
+  box-shadow: none;
+}
+
+a[href^="#user-content-fn"]:hover {
+  box-shadow: none;
+}
+
 p,
 ul,
 ol {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   line-height: 1.75em;
   margin: 1.2em 0;
 }
@@ -148,9 +167,11 @@ hr {
 code {
   font-family: 'SF Mono', menlo, inconsolata, monospace;
   font-size: calc(1em - 2px);
-  color: #555;
+  color: #b5b5b5;
+  background-color: #3c3c3c;
   padding: 0.2em 0.4em;
-  border-radius: 2px;
+  border-radius: 0.234em;
+  margin-bottom: 2px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
