--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,8 +13,8 @@
   --text-main: #36393b;
   --text-secondary: #6b6f72;
   --primary-color: #548e9b;
-  --font-family-serif: Merriweather, serif;
-  --font-family-sans: 'Fira Sans', sans-serif;
+  --font-family-serif: var(--font-family-sans);
+  --font-family-sans: 'Mona Sans', 'Fira Sans', sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -142,6 +142,7 @@ a {
 p a {
   text-decoration: none;
   box-shadow: inset 0 -0.12em 0 var(--primary-color);
+  padding-bottom: 2px;
   -webkit-transition: box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
   transition: box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 }
@@ -269,4 +270,16 @@ td {
   border-radius: 50%;
   height: 50px;
   width: 50px;
+}
+
+
+
+.icons-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.6em;
+  width: 100%;
+  margin-top: 0.9em;
 }
