--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,10 +8,10 @@ const { current = '' } = Astro.props;
     display: flex;
     flex: 1;
     font-family: var(--font-family-sans);
-    font-weight: 700;
+    font-weight: 500;
     justify-content: flex-end;
-    text-transform: uppercase;
-      gap: 20px;
+    text-transform: capitalize;
+    gap: 20px;
   }
 
   a {
@@ -31,7 +31,7 @@ const { current = '' } = Astro.props;
   a::before {
     content: '';
     position: absolute;
-    transition: transform .3s ease;
+    transition: transform 0.3s ease;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -55,7 +55,7 @@ const { current = '' } = Astro.props;
 </style>
 
 <nav>
-  <a class={current === "" ? "selected" : ""} href='/'>home</a>
-  <a class={current === "about" ? "selected" : ""} href='/about'>about</a>
-  <a class={current === "blog" ? "selected" : ""} href='/blog'>blog</a>
+  <a class={current === '' ? 'selected' : ''} href="/">home</a>
+  <!--<a class={current === 'about' ? 'selected' : ''} href="/about">about</a>-->
+  <a class={current === 'blog' ? 'selected' : ''} href="/blog">blog</a>
 </nav>
