--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -5,13 +5,16 @@ import getPostData from '../../utils/getPostData';
 
 export async function getStaticPaths() {
   const posts = await Astro.glob('../../data/blog-posts/*.md');
-  return posts.map((p) => ({
-    params: { slug: p.file.split('/').pop().split('.').shift() },
-    props: { post: p },
-  }));
+  return posts
+    .filter((p) => p.frontmatter.hidden != true)
+    .map((p) => ({
+      params: { slug: p.file.split('/').pop().split('.').shift() },
+      props: { post: p },
+    }));
 }
 
 const { Content, frontmatter } = Astro.props.post;
+
 const { title, description, publishDate } = frontmatter;
 const { slug, readingTime } = getPostData(Astro.props.post);
 const permalink = `${Astro.site.href}blog/${slug}`;
