--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Icons from '../components/Icons';
 
 const title = 'Splatterxl';
 const description = 'Crafting innovative experiences through code.';
@@ -7,9 +8,13 @@ const permalink = Astro.site.href;
 ---
 
 <BaseLayout title={title} description={description} permalink={permalink}>
-  <div class="home-container">
-    <h1>Splatterxl</h1>
-    <p>Crafting innovative experiences through code.</p>
+  <div class="bio-container">
+    <div class="home-container">
+      <!--<img src="/assets/redpanda.jpeg" />-->
+      <h1>Splatterxl</h1>
+      <p>Crafting innovative experiences through code.</p>
+      <Icons />
+    </div>
   </div>
   <div class="about-container">
     <div class="home-about">
@@ -24,9 +29,35 @@ const permalink = Astro.site.href;
         Let's dive deep into the intricacies of programming, explore new
         possibilities, and bring forth innovative solutions.
       </p>
+      <p class="links">
+        Contact:{' '}
+        <a href="https://github.com/splatterxl" class="text-link"> GitHub</a>{
+          ' '
+        }
+         |{' '}
+        <a href="https://twitter.com/wontfixbug" class="text-link"> Twitter</a>{
+          ' '
+        }
+         |{' '}
+        <a href="https://t.me/at_someone" class="text-link"> Telegram</a>{' '}
+         |{' '}
+        <a href="https://ko-fi.com/splatterxl" class="text-link"> Ko-fi</a>{' '}
+         |{' '}
+        <a href="mailto:contact@splt.dev" class="text-link">Email</a>
+      </p>
     </div>
   </div>
+  <div class="links-container">
+    <a href="https://github.com/splatterxl" target="_blank">GitHub</a>
+    <a href="https://twitter.com/wontfixbug" target="_blank">Twitter</a>
+  </div>
 </BaseLayout>
+
+<div class="s1"><div class="stripe"></div></div>
+<div class="s2"><div class="stripe"></div></div>
+<div class="s3"><div class="stripe"></div></div>
+
+<a rel="me" href="https://uwu.social/@splatterxl"></a>
 
 <style>
   .home-container {
@@ -37,17 +68,11 @@ const permalink = Astro.site.href;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-bottom: 4rem;
+    padding-bottom: 8rem;
   }
 
   .home-container h1 {
-    font-family:
-      ui-serif,
-      Georgia,
-      Cambria,
-      Times New Roman,
-      Times,
-      serif;
+    font-family: 'JetBrains Mono', 'Fira Code', var(--font-family-sans);
     font-size: 6rem;
     margin: 0;
   }
@@ -55,5 +80,94 @@ const permalink = Astro.site.href;
   .home-container p {
     font-size: 1.5rem;
     margin: 0;
+    text-align: center;
+  }
+
+  .home-container img {
+    width: 20vw;
+    border-radius: 2em;
+  }
+
+  @media (max-width: 500px) {
+    .home-container {
+      padding-bottom: 15rem;
+    }
+
+    .home-container h1 {
+      font-size: 3rem;
+    }
+  }
+
+  .links-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 1em;
+    display: flex;
+    flex: 1;
+    gap: 1em;
+    font-family: var(--font-family-sans);
+    font-weight: normal;
+  }
+
+  .s1 {
+    --primary-color: #d5bf5f;
+  }
+
+  .s3 {
+    --primary-color: #5facd5;
+  }
+
+  /*
+    faint green stripe diagonal over the body's background
+   */
+  .stripe {
+    width: 100%;
+    height: 5em;
+    background-color: var(--primary-color);
+    border: none;
+    margin: 0;
+    padding: 0;
+    box-shadow: 0 1px 0 0 var(--primary-color);
+    opacity: 10%;
+
+    position: absolute;
+    left: 0;
+    z-index: -2;
+  }
+
+  .s1 .stripe {
+    top: 70vh;
+    transform: skewy(-10deg);
+  }
+
+  .s2 .stripe {
+    top: 90vh;
+    transform: skewy(5deg);
+  }
+
+  .s3 .stripe {
+    top: 110vh;
+    transform: skewy(-5deg);
+  }
+
+  .about-container .home-about {
+    max-width: 60vw;
+  }
+
+  .about-container {
+    width: 100%;
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 8em;
+    //text-align: center;
+  }
+
+  .links {
+    margin-top: 3px;
+    text-align: center;
   }
 </style>
