--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -34,3 +34,10 @@
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
+
+@font-face {
+  font-family: "Mona Sans";
+  font-style: auto;
+  font-display: swap;
+  src: url("/assets/fonts/Mona-Sans.woff2");
+}
