--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -283,3 +283,8 @@ td {
   width: 100%;
   margin-top: 0.9em;
 }
+
+.home-container > .icons-container > a > svg {
+  width: 1.5rem;
+  height: 1.5rem;
+}
