--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,6 +1,6 @@
 ---
-import '../styles/fonts.css'
-import '../styles/global.css'
+import '../styles/fonts.css';
+import '../styles/global.css';
 
 export interface Props {
   title: string;
@@ -9,7 +9,7 @@ export interface Props {
 }
 
 const { title, description, permalink } = Astro.props;
-const socialUrl = Astro.site.href + 'assets/social.png'
+const socialUrl = Astro.site.href + 'assets/redpanda.jpeg';
 ---
 
 <!-- Global Metadata -->
