add theme color

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,6 +21,7 @@ const socialUrl = Astro.site.href + 'assets/redpanda.jpeg';
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta name="theme-color" content="#DF5656" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
@@ -28,6 +29,7 @@ const socialUrl = Astro.site.href + 'assets/redpanda.jpeg';
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={socialUrl} />
+<meta property="author" content="splt.dev" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
@@ -35,3 +37,4 @@ const socialUrl = Astro.site.href + 'assets/redpanda.jpeg';
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={socialUrl} />
+<meta property="twitter:site" content="@wontfixbug" />
