--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -151,6 +151,20 @@ const permalink = Astro.site.href;
     transform: skewy(-5deg);
   }
 
+  @media (max-width: 700px) {
+    .s1 .stripe {
+      top: 70vh;
+    }
+
+    .s2 .stripe {
+      top: 80vh;
+    }
+
+    .s3 .stripe {
+      top: 100vh;
+    }
+  }
+
   .about-container .home-about {
     max-width: 60vw;
   }
